fucking prototypes for fucking loadouts

--- a/Resources/Prototypes/Loadouts/Jobs/Civilian/chaplain.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Civilian/chaplain.yml
@@ -129,6 +129,14 @@
   equipment:
     neck: ClothingNeckStoleChaplain
 
+- type: itemLoadout # WD
+  id: ChaplainNecklaceSilver
+  equipment: ChaplainNecklaceSilver
+- type: startingGear
+  id: ChaplainNecklaceSilver
+  equipment:
+    neck: ClothingNeckNecklaceSilver
+
 # Outer clothing
 - type: itemLoadout
   id: ChaplainPlagueSuit
