--- a/Resources/Prototypes/Loadouts/Jobs/Civilian/bartender.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Civilian/bartender.yml
@@ -1,22 +1,3 @@
-# Head
-- type: itemLoadout
-  id: BartenderHead
-  equipment: BartenderHead
-
-- type: startingGear
-  id: BartenderHead
-  equipment:
-    head: ClothingHeadHatTophat
-
-- type: itemLoadout
-  id: BartenderBowler
-  equipment: BartenderBowler
-
-- type: startingGear
-  id: BartenderBowler
-  equipment:
-    head: ClothingHeadHatBowlerHat
-
 # Jumpsuit
 - type: itemLoadout
   id: BartenderJumpsuit
@@ -72,3 +53,13 @@
   id: BartenderWintercoat
   equipment:
     outerClothing: ClothingOuterWinterBar
+
+# PDA
+
+- type: itemLoadout # WD
+  id: BartenderPDA
+  equipment: BartenderPDA
+- type: startingGear
+  id: BartenderPDA
+  equipment:
+    id: BartenderPDA
