--- a/Resources/Prototypes/Maps/WhiteMoose.yml
+++ b/Resources/Prototypes/Maps/WhiteMoose.yml
@@ -65,5 +65,6 @@
           Musician: [ 1, 1 ]
           Reporter: [ 1, 1 ]
           Boxer: [ 1, 1 ]
+          Borg: [ 1, 1 ]
           Passenger: [ -1, -1 ]
 
